--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mysql2": "^3.13.0",
-    "ws": "^8.18.1"
-  },
-  "name": "skylottory",
+  "name": "machoterry",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "concurrently \"cross-env PORT=5000 node server/server.js\" \"cross-env PORT=5001 node server/server.js\" \"cross-env PORT=5002 node server/server.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "type": "module"
-  
-  
+  "devDependencies": {
+    "cross-env": "^7.0.3"
+  },
+  "dependencies": {
+    "concurrently": "^9.1.2",
+    "express": "^4.21.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
+  }
 }
