--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -1,27 +1,30 @@
 global
-  stats socket /var/run/api.sock user haproxy group haproxy mode 660 level admin expose-fd listeners
-  log stdout format raw local0 info
+    stats socket /var/run/api.sock user haproxy group haproxy mode 660 level admin expose-fd listeners
+    log stdout format raw local0 info
 
 defaults
-  mode http
-  timeout client 10s
-  timeout connect 5s
-  timeout server 10s
-  timeout http-request 10s
-  log global
+    mode http
+    timeout client 10s
+    timeout connect 5s
+    timeout server 10s
+    timeout http-request 10s
+    log global
+    option httpchk GET /
 
 frontend stats
-  bind *:8404
-  stats enable
-  stats uri /
-  stats refresh 10s
+    bind *:8404
+    stats enable
+    stats uri /
+    stats refresh 10s
 
 frontend myfrontend
-  bind *:80
-  default_backend webservers
+    bind *:80
+    default_backend webservers
 
 backend webservers
-  mode http
-  balance roundrobin
-  server s1 app1:3000 check weight 1
-  server s2 app2:3000 check weight 1
+    mode http
+    balance roundrobin
+    option httpchk GET /
+    server s1 app1:5000 check
+    server s2 app2:5001 check
+    server s3 app3:5002 check
